--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 93vh;
     gap: 7rem;
 }
 
@@ -56,10 +56,6 @@
     border-radius: 50px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
-
-/* .hero-text {
-    color: red;
-} */
 
 .hero-h1 {
     font-size: 4rem;
@@ -85,3 +81,96 @@
     gap: 2rem;
     margin-top: 2rem;
 }
+
+@media (max-width: 1024px) {
+    .hero-buttons{
+        font-size: 1rem;
+        gap: 10px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .profile-image{
+        display: none;
+    } 
+
+    .hero {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90vh;
+        gap: 7rem;
+    }
+    
+    .hero-content {
+        width: 90%;
+        align-items: center;
+        justify-content: center;
+    }
+        
+    .hero-h1 {
+        font-size: 3.5rem;
+        font-weight:bolder;
+        text-align: center;
+        color: #fff;
+        margin-bottom: 1rem;
+        margin-top: 2rem;
+    }
+    
+    .hero-h2{
+        font-weight: 400;
+        font-size: 1.3rem;
+        text-align: center;
+    }
+    
+    .highlight {
+        animation: colorChange 9s infinite linear;
+      }
+    
+    .hero-buttons{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1.25rem;
+        margin-top: 4rem;
+    }
+    
+/*     
+    
+    .hero {
+        flex-direction: column;
+        gap: 2rem;
+        width: 100vw;
+    }
+
+    .hero-content {
+        width: 90%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-h1 {
+        font-size: 3rem;
+        margin-top: 150px;
+    }
+
+    .hero-h2 {
+        font-size: 1rem;
+    }
+
+    .hero-buttons {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 2rem;
+    }
+    
+    .profile-image{
+        display: none;
+    } */
+
+  }
