--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,13 +1,17 @@
 .navbar {
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     justify-content: space-between;
     padding: 1rem 3rem;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     text-decoration: none;
-    color: white
+    color: white;
+    backdrop-filter: blur(3px);
 }
 
-li {
+.navbar li {
     list-style-type: none;
 }
 
@@ -26,6 +30,19 @@ a{
     text-decoration: none;
     color: white;
 }
+
+.nav-links.desktop-only button {
+  all: unset;
+  text-emphasis: none;
+  text-decoration: none;
+  color: white;
+  background-color: transparent;
+  font-size: 1rem;
+  font-family: Montserrat;
+}
+
+
+
 .nav-icons {
     display: flex;
     align-items: center;
@@ -36,4 +53,99 @@ a{
     width: 30px;
     height: 30px;
     cursor: pointer;
+}
+
+.navbar img {
+    height: 50px;
+}
+
+.mobile-only {
+    display: none;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    right: -120%;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0B1F16;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 2rem;
+    transition: right 0.3s ease-in-out;
+    z-index: 999;
+  }
+  
+  .close-button {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: white;
+    align-self: flex-end;
+    margin-bottom: 2rem;
+    cursor: pointer;
+  }
+  
+  .mobile-menu-content a {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 1.5rem;
+    color: white;
+    font-size: 2rem;
+    text-decoration: none;
+  }
+  
+  .mobile-menu-content img {
+    width: 30px;
+    height: 30px;
+    margin-right: 1rem;
+  }
+
+  .mobile-menu.open {
+    right: 0;
+  }
+
+
+@media screen and (max-width: 768px) {
+    .desktop-only {
+      display: none;
+    }
+  
+    .mobile-only {
+      display: block;
+    }
+
+
+    .navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0;
+    }
+    
+    .menu-icon {
+      margin-left: auto; 
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .nav-inicio{
+      padding: 0;
+    }
+    
+    .navbar.mobile-only.mobile-header{
+      width: 100%;
+      margin: 0;
+      padding: 1rem 1.5rem;
+    }
+
+  .nav-inicio{
+    font-family: Montserrat;
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
 }
