--- a/src/styles/ProjectGrid.css
+++ b/src/styles/ProjectGrid.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5rem;
 }
 
 .project-grid {
@@ -16,4 +15,35 @@
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
+}
+
+.other-projects{
+    margin-top: 4rem;
+}
+
+.other-projects a{
+    display: flex;
+    gap: 1rem;
+    font-size: 1.5rem;
+    transition: transform 0.3s;
+}
+.other-projects a:hover{
+    transform: translateY(-0.5rem);
+}
+
+@media screen and (max-width: 768px){
+    
+    .project-grid {
+        grid-template-columns: repeat(1, 1fr);
+        gap:40px;
+        margin-top: 2rem;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .project-container{
+        width: 80vw;
+    }
+
 }
