--- a/src/styles/TitleSection.css
+++ b/src/styles/TitleSection.css
@@ -21,3 +21,17 @@
     background-color: #00EF7A;
     margin-top: 5px;
 }
+
+@media screen and (max-width: 768px){
+    
+.title-section h1 {
+    color: #00EF7A; 
+    font-size: 2.25rem;
+    font-weight: bold;
+    margin-bottom: 0.7rem;
+}
+
+.title-section{
+    margin-bottom: 0.5rem;
+}
+}
